syntax = "proto3";

service Worker {
	rpc AddBlock (AddBlockRequest) returns (AddBlockResponse);
	rpc SetValue(SetValueRequest) returns (SetValueResponse);
}

message AddBlockRequest {
	bytes Block = 1;
	string ProposingNID = 2;
}

message AddBlockResponse {}

// Node defines a node in the network
message Node {
	string NID = 1;
	string Address = 2;
	string Type = 3;
	bytes PubKey = 4;
	string ParentNID = 5;
}

message SetValueRequest {
	string Key = 1;
	string Value = 2;
}

message SetValueResponse {}